# curio-firmware

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: app.rs  main.rs  ui.rs
src/assets/: mod.rs
src/game/: board.rs  mod.rs
src/ui/: menu.rs  mod.rs  sprites.rs  widgets.rs
