[package]
name = "curio-firmware"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Firmware for Curio: Glorified Infrared Remote Control."
repository = "https://github.com/dotcypress/curio-firmware"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]

[dependencies]
cortex-m-rtic = "1.1.3"
curio-bsp = { git = "https://github.com/dotcypress/curio" }
klaptik = { version="0.2.0", features = ["st7567"] }
panic-halt = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.4.0"

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
